--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -8,7 +8,8 @@
     box-sizing: border-box;
 }
 .header{
-    width: 90%;
+    width: 80%;
+    height: 100vh;
     margin: 0 auto;
     display: flex;
     justify-content: space-evenly;
@@ -17,31 +18,58 @@
     margin-top: 20px;
 }
 .header > #logo-image{
-    width: 15%;
+    width: 10%;
+    margin-right: 5%;
 }
 .header > .menu-nav{
     width: 70%;
     height: 100%;
-    background-color: blue;
 }
 .header > .menu-nav > .menu-nav-list{
     width: 100%;
     display: flex;
-    gap: 15%;
+    gap: 12%;
     list-style-type: none;
 }
 .header > .menu-nav > .menu-nav-list > .menu-nav-option > .link-menu{
-    color: black;
+    color: #9e9c9c;
     text-decoration: none;
+    font-size: 18px;
 }
 .header > .theme-and-contact{
-    width: 10%;
+    width: 12%;
     display: flex;
-    justify-content: space-evenly;
-    background-color: green;
+    justify-content: space-between;
+    align-items: center;
 }
 .header > .theme-and-contact > .theme{
+    width: 15%;
     border: none;
-    width: 10px;
     background-color: inherit;
+    display: flex;
+}
+.header > .theme-and-contact > .theme > .custom-size{
+    font-size: 1.5rem;
+}
+.header > .theme-and-contact > .contact-link-area{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 95px;
+    height: 30px;
+    background-color: #04b0d3;
+    gap: 10px;
+    padding: 5px;
+    border-radius: 5px;
+    transition: background-color 0.5s ease-in-out;
+}
+.header > .theme-and-contact > .contact-link-area:hover{
+    background-color: #038eaa;
+}
+.header > .theme-and-contact > .contact-link-area > .contact-link{
+    text-decoration: none;
+    color: white;
+}
+.header > .theme-and-contact > .contact-link-area > .custom-opacity{
+    color: white;
 }
