--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -1,57 +1,65 @@
 /*Estilização da página inicial da aplicação*/
 
-/*Header*/
-
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-.header{
+.view-index{
+    width: 100%;
+    height: 100vh;
+}
+
+/*section apresentation*/
+
+.apresentation{
+    width: 100%;
+    height: 100%;
+    background-color: #e2e2e2;
+}
+.apresentation > .header-container > .header{
     width: 80%;
     margin: 0 auto;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    box-shadow: offset-x offset-y blur-radius color;
-    margin-top: 20px;
 }
-.header > #logo-image{
+.apresentation > .header-container > .header > #logo-image{
     width: 10%;
     margin-right: 5%;
 }
-.header > .menu-nav{
+.apresentation > .header-container > .header > .menu-nav{
     width: 70%;
     height: 100%;
 }
-.header > .menu-nav > .menu-nav-list{
+.apresentation > .header-container > .header > .menu-nav > .menu-nav-list{
     width: 100%;
     display: flex;
     gap: 12%;
     list-style-type: none;
 }
-.header > .menu-nav > .menu-nav-list > .menu-nav-option > .link-menu{
+.apresentation > .header-container > .header > .menu-nav > .menu-nav-list > .menu-nav-option > .link-menu{
     color: #9e9c9c;
     text-decoration: none;
     font-size: 18px;
 }
-.header > .theme-and-contact{
+.apresentation > .header-container > .header > .theme-and-contact{
     width: 12%;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.header > .theme-and-contact > .theme-button{
+.apresentation > .header-container > .header > .theme-and-contact > .theme-button{
     width: 15%;
     border: none;
     background-color: inherit;
     display: flex;
     cursor: pointer;
 }
-.header > .theme-and-contact > .theme-button > .custom-size{
+.apresentation > .header-container > .header > .theme-and-contact > .theme-button > .custom-size{
     font-size: 1.5rem;
 }
-.header > .theme-and-contact > .contact-link-area{
+.apresentation > .header-container > .header > .theme-and-contact > .contact-link-area{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -63,13 +71,19 @@
     border-radius: 5px;
     transition: background-color 0.5s ease-in-out;
 }
-.header > .theme-and-contact > .contact-link-area:hover{
+.apresentation > .header-container > .header > .theme-and-contact > .contact-link-area:hover{
     background-color: #038eaa;
 }
-.header > .theme-and-contact > .contact-link-area > .contact-link{
+.apresentation > .header-container > .header > .theme-and-contact > .contact-link-area > .contact-link{
     text-decoration: none;
     color: white;
 }
-.header > .theme-and-contact > .contact-link-area > .custom-opacity{
+.apresentation > .header-container > .header > .theme-and-contact > .contact-link-area > .custom-opacity{
     color: white;
+}
+
+/*initial informations*/
+
+.apresentation .apresentation-text{
+    
 }
