--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -7,7 +7,7 @@
 }
 .view-index{
     width: 100%;
-    height: 100vh;
+    height: 90vh;
 }
 
 /*section apresentation*/
@@ -15,7 +15,10 @@
 .apresentation{
     width: 100%;
     height: 100%;
-    background-color: #e2e2e2;
+    background: linear-gradient(90deg, #002679, #0ed4ee);
+    padding: 20px;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
 .apresentation > .header-container > .header{
     width: 80%;
@@ -23,6 +26,9 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    background-color: white;
+    padding: 10px;
+    border-radius: 15px;
 }
 .apresentation > .header-container > .header > #logo-image{
     width: 10%;
@@ -97,10 +103,17 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin-top: 5%;
+    margin-top: 8%;
 }
-.apresentation > .apresentation-informations > .text-informations >  .container-headers > .container-headers{
-    margin-bottom: 10px;
+.apresentation > .apresentation-informations > .text-informations >  .container-headers > .header-01, .header-02, .header-03{
+    margin-bottom: 20px;
+    color: white;
+}
+.apresentation > .apresentation-informations > .text-informations >  .container-headers > .header-01{
+    font-size: 50px;
+}
+.apresentation > .apresentation-informations > .text-informations >  .container-headers > .header-02{
+    font-size: 25px;
 }
 .apresentation > .apresentation-informations > .text-informations > .container-list-and-contact{
     width: 50%;
@@ -108,10 +121,34 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    color: white;
+}
+.apresentation > .apresentation-informations > .text-informations > .container-list-and-contact > .apresentation-text-list{
+    height: 75%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-bottom: 5%;
+}
+.apresentation > .apresentation-informations > .text-informations > .container-list-and-contact > .apresentation-text-list > .apresentation-text-option{
+    list-style-type: none;
+    font-size: 20px;
+}
+.apresentation > .apresentation-informations > .text-informations > .container-list-and-contact > .apresentation-text-link{
+    width: 110px;
+    height: 30px;
+    background-color: #04b0d3;
+    padding: 5px;
+    border-radius: 5px;
+    transition: background-color 0.5s ease-in-out;
+    text-decoration: none;
+    color: white;
+    font-size: 18px;
 }
 .apresentation > .apresentation-informations > .apresentation-image-container{
     width: 50%;
 }
-.apresentation > .apresentation-informations > .apresentation-image-container > .apresentation-image{
-    width: 10%;
+.apresentation > .apresentation-informations > .apresentation-image-container > #apresentation-image{
+    width: 100%;
+    margin-top: 8%;
 }
