--- a/resources/views/html/cards-basic.html
+++ b/resources/views/html/cards-basic.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <!-- =========================================================
-* Sneat - Bootstrap 5 HTML Admin Template - Pro | v1.0.0
+* Sneat -a Bootstrap 5 HTML Admin Template - Pro | v1.0.0
 ==============================================================
 
 * Product Page: https://themeselection.com/products/sneat-bootstrap-html-admin-template/
