--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -160,8 +160,61 @@
     width: 80%;
     margin: 0 auto;
 }
-.service .service-title{
+.service > .service-title{
     font-size: 48px;
     text-align: center;
     margin: 100px;
+}
+.service > .container-cards-service{
+    width: 100%;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(4, 300px);
+    gap: 20px;
+}
+.service > .container-cards-service > .card-of-service{
+    width: 300px;
+    height: 450px;
+    box-shadow: 2px 4px 6px 0px rgba(0, 0, 0, 0.2);
+    border-radius: 15px;
+}
+.service > .container-cards-service > .card > .card-image > img{
+    width: 100%;
+    height: 250px;
+    border-radius: 15px;
+}
+
+/*Mission section*/
+
+.mission{
+    width: 80%;
+    height: 80vh;
+    margin: 0 auto;
+    display: flex;
+    margin-top: 100px;
+}
+.mission > .mission-container-image, .mission-container-text{
+    width: 50%;
+}
+.mission > .mission-container-image > img{
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    box-shadow: 2px 4px 6px 0px rgba(0, 0, 0, 0.2);
+}
+.mission > .mission-container-text{
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    justify-content: start
+}
+.mission > .mission-container-text > .mission-text-header{
+    font-size: 60px;
+    margin-bottom: 80px;
+}
+.mission > .mission-container-text > .mission-text-informations > .text-informations{
+    font-size: 26px;
+    max-width: 500px;
+    text-align: justify;
+    line-height: 35px;
 }
