--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -169,11 +169,11 @@
     width: 100%;
     margin: 0 auto;
     display: grid;
-    grid-template-columns: repeat(4, 300px);
-    gap: 20px;
+    grid-template-columns: repeat(4, 350px);
+    gap: 25px;
 }
 .service > .container-cards-service > .card-of-service{
-    width: 300px;
+    width: 350px;
     height: 450px;
     box-shadow: 2px 4px 6px 0px rgba(0, 0, 0, 0.2);
     border-radius: 15px;
@@ -217,4 +217,58 @@
     max-width: 500px;
     text-align: justify;
     line-height: 35px;
+}
+
+/*section contact*/
+
+.contact{
+    width: 100%;
+    height: 50vh;
+    display: flex;
+    margin-top: 100px;
+    background-color: #01455f;
+    border-radius: 15px;
+}
+.contact > .location-contact-container, .social-content{
+    width: 50%;
+    margin-top: 20px;
+}
+.contact > .location-contact-container{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.contact > .location-contact-container > .logo-and-name{
+    display: flex;
+    width: 50%;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-bottom: 20px;
+}
+.contact > .location-contact-container > .logo-and-name > img{
+    width: 30%;
+}
+.contact > .location-contact-container > .location, .contact-box{
+    width: 40%;
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: space-evenly;
+}
+.contact > .location-contact-container > .location > .location-title, .location-informations{
+    color: aliceblue;
+}
+.contact > .location-contact-container > .contact-box > .contact-box-title, .contact-box-informations{
+    color: aliceblue;
+}
+.contact > .location-contact-container > .contact-box > #last-contact{
+    margin-bottom: 10%;
+}
+.contact > .social-content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
