--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -271,4 +271,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: blue;
+}
+.contact > .social-content > .social-content-buton{
+    height: 40%;
+    background-color: green;
 }
