--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -271,9 +271,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: blue;
 }
 .contact > .social-content > .social-content-buton{
-    height: 40%;
-    background-color: green;
+    height: 45%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
