--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -5,6 +5,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+html{
+    scroll-behavior: smooth;
+}
 .view-index{
     width: 100%;
     height: 90vh;
@@ -19,6 +22,16 @@
     padding: 20px;
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
+}
+.apresentation > .header-container{
+    position: fixed;
+    top: 0.5;
+    left: 10%;
+    width: 80%;
+    background-color: white;
+    z-index: 1000;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    border-radius: 15px;
 }
 .apresentation > .header-container > .header{
     width: 80%;
@@ -96,6 +109,7 @@
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
+    margin-top: 5%;
 }
 .apresentation > .apresentation-informations > .text-informations{
     width: 50%;
@@ -169,19 +183,33 @@
     width: 80%;
     margin: 0 auto;
     display: grid;
-    grid-template-columns: repeat(4, 25%);
+    grid-template-columns: repeat(4, 300px);
     gap: 25px;
 }
 .service > .container-cards-service > .card-of-service{
-    width: 75%px;
-    height: 450px;
-    box-shadow: 2px 4px 6px 0px rgba(0, 0, 0, 0.2);
+    min-width: 300px;
+    min-height: 500px;
+    box-shadow: 2px 4px 6px 0px rgba(0, 0, 0, 0.4);
     border-radius: 15px;
+}
+.service > .container-cards-service > .card{
+    padding: 10px;
 }
 .service > .container-cards-service > .card > .card-image > img{
     width: 100%;
     height: 250px;
     border-radius: 15px;
+}
+.service > .container-cards-service > .card > .card-header > h5 {
+    font-size: 26px;
+    margin: 10px;
+    color: #555555;
+    font-weight: 200;
+}
+.service > .container-cards-service > .card > .card-body > p{
+    font-size: 18px;
+    text-align: left;
+    margin: 10px;
 }
 
 /*Mission section*/
