--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -25,6 +25,8 @@ body{
     width: 100%;
     height: 100%;
     background-image: url("/assets/img/project/networkImage.jpeg");
+    background-color: rgba(0, 0, 0, 0.5);
+    background-blend-mode: darken;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -145,17 +147,22 @@ body{
     justify-content: space-between;
 }
 .apresentation > .apresentation-informations > .text-informations > .container-list-and-contact > .apresentation-text-list > .apresentation-text-option{
+    min-width: 450px;
     list-style-type: none;
     font-size: 22px;
     margin-bottom: 5%;
     font-weight: 500;
+    gap: 20px;
+}
+.apresentation > .apresentation-informations > .text-informations > .container-list-and-contact > .apresentation-text-list > .apresentation-text-option > .topt-spam{
+    margin-left: 10px;
 }
 .apresentation > .apresentation-informations > .text-informations > .container-list-and-contact > .apresentation-text-link{
-    width: 150px;
-    height: 60px;
+    width: 250px;
+    height: 70px;
     background-color: #04b0d3;
-    padding: 5px;
-    border-radius: 5px;
+    padding: 10px;
+    border-radius: 15px;
     transition: background-color 0.5s ease-in-out;
     text-decoration: none;
     color: white;
